web/content/stylesheet.css
* {
  margin: 0;
  padding: 0;

  font-family: Palatino, 'Times New Roman', Times, serif;
}

body {
  background: #fff;
}

a {
  text-decoration: none;
}

a:link,
a:visited {
  color: #30f;
}

a:hover {
  color: #39f;
}

a[name]:hover {
  color: inherit;
}

#main {
  position: absolute;

  top: 40px;
  left: 280px;

  width: 500px;
}

#main h1 {
  font-size: 40px;
  font-weight: normal;

  line-height: 40px;

  letter-spacing: -1px;
  font-family: Impact, Helvetica, Arial, sans-serif;
}

#main h2,h3,h4 {
  font-family: 'Courier New', Courier, monospace;
}

#main p {
  margin: 20px 0;
  
  font-size: 15px;
  
  line-height: 20px;
}

#main ul {
  margin: 20px;
}

#main li {
  list-style-type: square;

  font-size: 15px;
  
  line-height: 20px;
}

#main img {
  margin: 20px 0;
}

#sidebar {
  position: absolute;

  top: 40px;
  left: 20px;
  width: 200px;

  padding: 20px 20px 0 0;

  border-right: 1px solid #ccc;

  text-align: right;
}

#sidebar h1 {
  font-family: 'Courier New', Courier, monospace;
}
#sidebar h2 {

  font-size: 18px;

  color: #333;

  letter-spacing: 1px;

  line-height: 20px;
  font-family: 'Courier New', Courier, monospace;
}

#sidebar ul {
  list-style-type: none;

  margin: 20px 0;
}

#sidebar li {
  font-size: 14px;

  line-height: 20px;
}

